Fix logo margin in mobile and remove auto margin from theme button

--- a/styles.css
+++ b/styles.css
@@ -229,7 +229,7 @@ body {
         display: flex;
         width: 36px;
         height: 36px;
-        margin: 0 auto;
+        margin: 0;
     }
     
     .nav-menu {
@@ -248,7 +248,7 @@ body {
     }
     
     .logo-placeholder {
-        margin-left: 0;
+        margin-left: 20px;
         flex: 1;
         justify-content: flex-start;
     }
