--- a/styles.css
+++ b/styles.css
@@ -164,7 +164,7 @@ body {
     position: relative;
     width: 100%;
     max-width: 100%;
-    border-radius: 8px;
+    border-radius: 0;
     overflow: hidden;
     box-shadow: -4px 8px 25px rgba(0, 0, 0, 0.3), -2px 4px 10px rgba(0, 0, 0, 0.2);
     margin-top: -10px;
